--- a/FAZA_1.ipynb
+++ b/FAZA_1.ipynb
@@ -165,6 +165,12 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Chosen attributes",
+   "id": "e8cf0c174da30d94"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "skin_temp = observation[\"Skin Temperature\"]\n",
@@ -184,6 +190,12 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "### General statistics and information about attributes",
+   "id": "9a710e518f6f389a"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "cols = [\"Skin Temperature\", \"SpO₂\", \"HR\", \"PI\", \"RR\", \"PRV\", \"BP\", \"PVI\", \"SV\", \"CO\"]\n",
@@ -195,203 +207,36 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Visualisation of attributes",
+   "id": "677da4f0d268b070"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
    "source": [
-    "plt.subplot(1, 2, 1)\n",
-    "plt.hist(skin_temp, bins=60, edgecolor=\"black\")\n",
-    "plt.xlabel(\"Skin Temperature °C\")\n",
-    "\n",
-    "\n",
-    "plt.subplot(1, 2, 2)\n",
-    "plt.boxplot(skin_temp)\n",
-    "plt.xlabel(\"Skin Temperature °C\")\n",
-    "\n",
-    "plt.show()\n"
+    "for col in cols:\n",
+    "    plt.figure(figsize=(8, 5))\n",
+    "    plt.subplot(1, 2, 1)\n",
+    "    sns.histplot(observation[col], bins=30, kde=True)\n",
+    "    plt.title(f'{col}')\n",
+    "    plt.xlabel(f'{col}')\n",
+    "    \n",
+    "    plt.subplot(1, 2, 2)\n",
+    "    plt.boxplot(observation[col])\n",
+    "    plt.title(f'{col}')\n",
+    "    plt.xlabel(f'{col}')\n",
+    "    plt.show()"
    ],
-   "id": "dcf507d87a1e2a0",
+   "id": "cda6d9782682223a",
    "outputs": [],
    "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": [
-    "The temperature values are in a range 33-38 °C, mean: 35.9 °C and std: 0.84\n",
-    "This indicates that measurements are within the normal range and do not vary significantly"
-   ],
-   "id": "f98068ae8fcd02fc"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "plt.subplot(1, 2, 1)\n",
-    "plt.hist(spo, bins=60, edgecolor=\"black\")\n",
-    "plt.xlabel(\"SpO %\")\n",
-    "\n",
-    "\n",
-    "plt.subplot(1, 2, 2)\n",
-    "plt.boxplot(spo)\n",
-    "plt.xlabel(\"SpO %\")\n",
-    "\n",
-    "plt.show()"
-   ],
-   "id": "10af09438c9d7166",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "plt.subplot(1, 2, 1)\n",
-    "plt.hist(hr, bins=60, edgecolor=\"black\")\n",
-    "plt.xlabel(\"HR bpm\")\n",
-    "\n",
-    "plt.subplot(1, 2, 2)\n",
-    "plt.boxplot(hr)\n",
-    "plt.xlabel(\"HR bpm\")\n",
-    "\n",
-    "plt.show()"
-   ],
-   "id": "bd62a2a91d21a123",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "plt.subplot(1, 2, 1)\n",
-    "plt.hist(pi, bins=60, edgecolor=\"black\")\n",
-    "plt.xlabel(\"PI %\")\n",
-    "\n",
-    "plt.subplot(1, 2, 2)\n",
-    "plt.boxplot(pi)\n",
-    "plt.xlabel(\"PI %\")\n",
-    "\n",
-    "plt.show()"
-   ],
-   "id": "5a4c1b721a6483e6",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "plt.subplot(1, 2, 1)\n",
-    "plt.hist(rr, bins=60, edgecolor=\"black\")\n",
-    "plt.xlabel(\"RR\")\n",
-    "\n",
-    "plt.subplot(1, 2, 2)\n",
-    "plt.boxplot(rr)\n",
-    "plt.xlabel(\"RR\")\n",
-    "\n",
-    "plt.show()"
-   ],
-   "id": "54777f7d64d061f3",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "plt.subplot(1, 2, 1)\n",
-    "plt.hist(prv, bins=60, edgecolor=\"black\")\n",
-    "plt.ylabel(\"PRV ms\")\n",
-    "\n",
-    "plt.subplot(1, 2, 2)\n",
-    "plt.boxplot(prv)\n",
-    "plt.xlabel(\"PRV ms\")\n",
-    "\n",
-    "plt.show()"
-   ],
-   "id": "d3402871494be966",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": [
-    "Pulse rate variability are in a range 20-200ms, mean: 117.62, std: 21.83\n",
-    "This indicates that the average value is within the normal range, but some values are widely scattered"
-   ],
-   "id": "ffe0377f282a4830"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "plt.subplot(1, 2, 1)\n",
-    "plt.hist(bp, bins=60, edgecolor=\"black\")\n",
-    "plt.xlabel(\"BP\")\n",
-    "\n",
-    "plt.subplot(1, 2, 2)\n",
-    "plt.boxplot(bp)\n",
-    "plt.xlabel(\"BP\")\n",
-    "\n",
-    "plt.show()"
-   ],
-   "id": "2a418631c8a6a051",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "plt.subplot(1, 2, 1)\n",
-    "plt.hist(pvi, bins=60, edgecolor=\"black\")\n",
-    "plt.xlabel(\"pvi\")\n",
-    "\n",
-    "plt.subplot(1, 2, 2)\n",
-    "plt.boxplot(pvi)\n",
-    "plt.xlabel(\"pvi\")\n",
-    "\n",
-    "plt.show()"
-   ],
-   "id": "4e267712dd20d8cc",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "plt.subplot(1, 2, 1)\n",
-    "plt.hist(sv, bins=60, edgecolor=\"black\")\n",
-    "plt.xlabel(\"sv\")\n",
-    "\n",
-    "plt.subplot(1, 2, 2)\n",
-    "plt.boxplot(sv)\n",
-    "plt.xlabel(\"sv\")\n",
-    "\n",
-    "plt.show()"
-   ],
-   "id": "8ff1c45bdf807b9c",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "plt.subplot(1, 2, 1)\n",
-    "plt.hist(co, bins=60, edgecolor=\"black\")\n",
-    "plt.xlabel(\"co\")\n",
-    "\n",
-    "plt.subplot(1, 2, 2)\n",
-    "plt.boxplot(co)\n",
-    "plt.xlabel(\"co\")\n",
-    "\n",
-    "plt.show()"
-   ],
-   "id": "a086ffea7e1e202a",
-   "outputs": [],
-   "execution_count": null
+   "source": "We can see that almost every chosen attribute have normal distribution, and also they have outliers as well",
+   "id": "d6a008f72a4ea001"
   },
   {
    "metadata": {},
@@ -488,6 +333,12 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Correlation between the predicted variable",
+   "id": "60e66f418b0ebe0b"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "corr = observation.corr(numeric_only=False)\n",
@@ -499,13 +350,21 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "Our predicted variable have a very strong correlation with **PVI**, **Skin Temperature**, **EtCO₂** and not very strong negative correlation with **SpO₂**",
+   "id": "7642c1ae273fe929"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Visualisation of correlations",
+   "id": "f57f63de51ed9667"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
-   "source": [
-    "sns.scatterplot(data=observation, x='PVI', y='oximetry')\n",
-    "plt.xlabel(\"PVI %\")\n",
-    "plt.ylabel(\"oximetry\")"
-   ],
-   "id": "dedf3f14c6754069",
+   "source": "attributes = ['PVI', 'Skin Temperature', 'EtCO₂', 'SpO₂']",
+   "id": "4b8a2ac69663d585",
    "outputs": [],
    "execution_count": null
   },
@@ -513,23 +372,14 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "sns.scatterplot(data=observation, x='Skin Temperature', y='oximetry')\n",
-    "plt.xlabel(\"Skin Temperature °C\")\n",
-    "plt.ylabel(\"oximetry\")"
+    "for attribute in attributes:\n",
+    "    plt.figure(figsize=(8, 5))\n",
+    "    sns.scatterplot(data=observation, x=f'{attribute}', y='oximetry')\n",
+    "    plt.title(f'{attribute}')\n",
+    "    plt.xlabel(f'{attribute}')\n",
+    "    plt.show()"
    ],
-   "id": "2c0b372ce5c9d6c4",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "sns.scatterplot(data=observation, x='EtCO₂', y='oximetry')\n",
-    "plt.xlabel(\"EtCO₂ mmHg\")\n",
-    "plt.ylabel(\"oximetry\")"
-   ],
-   "id": "a40d84b1980a62ee",
+   "id": "5cd285e0b95c92f3",
    "outputs": [],
    "execution_count": null
   },
@@ -542,7 +392,14 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "После предварительно анализа можно увидеть что СO и HR зависят между сообой очень сильно (r = 0.76). Наша целевая переменная **oximetry** зависит от PVI (r = 0.66), Skin Temperature (r = 0.368), **$EtCO₂$** (r = 0.281) а так же негативную корреляцию с **$SpO_2$** (r = -0.121). Так же датасеты между собой связывать не надо так как вся информация которая нам нужна уже находиться в датасете **observation**. ",
+   "source": [
+    "After analysis, we can seen that there is a strong correlation between the **CO** and **HR** variables (r = 0.76) also variables **PI** and **EtCO₂** (r = 0.31) and also **Skin Temperature** and **PVI** (r = 0.299)\n",
+    "\n",
+    "Our target variable, oximetry, is most strongly dependent on **PVI** (r = 0.66) **Skin Temperature** (r = 0.368), and **EtCO₂** (r = 0.281),\n",
+    "and also has a negative correlation with **SpO₂** (r = −0.121)\n",
+    "\n",
+    "We don't need to combine other datasets, all required the information is already in the observation dataset"
+   ],
    "id": "b39e48253cac6906"
   },
   {
@@ -554,7 +411,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "Check data types",
+   "source": "### Check data types",
    "id": "b145eb277b80d7d"
   },
   {
@@ -584,7 +441,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "Format data types",
+   "source": "### Format data types",
    "id": "2384ab57724a6483"
   },
   {
@@ -629,7 +486,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "Check nulls",
+   "source": "### Check nulls",
    "id": "f3f6b6ebaf2a1914"
   },
   {
@@ -658,6 +515,12 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "We have a lot of nulls in **patient** dataset, so we need to put some default values",
+   "id": "6540144136095e1b"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "patient['residence'] = patient['residence'].fillna('Unknown')\n",
@@ -673,7 +536,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "Check duplicates",
+   "source": "### Check duplicates",
    "id": "287bcdad8ec3f14a"
   },
   {
@@ -687,16 +550,8 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "observation = observation.drop_duplicates()",
-   "id": "89741a6959b61c5e",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
    "source": "station.duplicated().sum()",
-   "id": "1b1b8c9777ad67f",
+   "id": "6920eab8baf75629",
    "outputs": [],
    "execution_count": null
   },
@@ -704,7 +559,27 @@
    "metadata": {},
    "cell_type": "code",
    "source": "patient.duplicated().sum()",
-   "id": "b1e53d8b68f3b079",
+   "id": "92e0d0fc90e3d7aa",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "We have one duplicate in **observation** dataset, we need to clean it",
+   "id": "83f22b46b185022b"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Clean duplicates",
+   "id": "e0dde275cc7ee1ee"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "observation = observation.drop_duplicates()",
+   "id": "89741a6959b61c5e",
    "outputs": [],
    "execution_count": null
   },
@@ -868,6 +743,12 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Remove outliers or distant observations\n",
+   "id": "f74d10dae39ea0ad"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "def identify_outliers(a):\n",
@@ -884,17 +765,17 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "co_out = identify_outliers(co)\n",
-    "co = co.drop(co_out.index)\n",
+    "co_out = identify_outliers(observation['CO'])\n",
+    "observation = observation.drop(co_out.index)\n",
     "\n",
-    "pvi_out = identify_outliers(pvi)\n",
-    "pvi = pvi.drop(pvi_out.index)\n",
+    "pvi_out = identify_outliers(observation['PVI'])\n",
+    "observation = observation.drop(pvi_out.index)\n",
     "\n",
-    "sv_out = identify_outliers(sv)\n",
-    "sv = sv.drop(sv_out.index)\n",
+    "sv_out = identify_outliers(observation['SV'])\n",
+    "observation = observation.drop(sv_out.index)\n",
     "\n",
-    "bp_out = identify_outliers(bp)\n",
-    "bp = bp.drop(bp_out.index)"
+    "bp_out = identify_outliers(observation['BP'])\n",
+    "observation = observation.drop(bp_out.index)"
    ],
    "id": "d7661c630f19c2ae",
    "outputs": [],
@@ -902,47 +783,44 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Visualisation of cleaned attributes",
+   "id": "8487c9c6b9b00134"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
-   "source": [
-    "plt.figure(figsize=(10, 8))\n",
-    "plt.subplot(2, 4, 1)\n",
-    "plt.hist(pvi, bins=60, edgecolor=\"black\")\n",
-    "plt.xlabel(\"pvi\")\n",
-    "\n",
-    "plt.subplot(2, 4, 2)\n",
-    "plt.boxplot(pvi)\n",
-    "plt.xlabel(\"pvi\")\n",
-    "\n",
-    "plt.subplot(2, 4, 3)\n",
-    "plt.hist(co, bins=60, edgecolor=\"black\")\n",
-    "plt.xlabel(\"co\")\n",
-    "\n",
-    "plt.subplot(2, 4, 4)\n",
-    "plt.boxplot(co)\n",
-    "plt.xlabel(\"co\")\n",
-    "\n",
-    "plt.subplot(2, 4, 5)\n",
-    "plt.hist(sv, bins=60, edgecolor=\"black\")\n",
-    "plt.xlabel(\"sv\")\n",
-    "\n",
-    "plt.subplot(2, 4, 6)\n",
-    "plt.boxplot(sv)\n",
-    "plt.xlabel(\"sv\")\n",
-    "\n",
-    "plt.subplot(2, 4, 7)\n",
-    "plt.hist(bp, bins=60, edgecolor=\"black\")\n",
-    "plt.xlabel(\"BP\")\n",
-    "\n",
-    "plt.subplot(2, 4, 8)\n",
-    "plt.boxplot(bp)\n",
-    "plt.xlabel(\"BP\")\n",
-    "\n",
-    "\n",
-    "plt.show()"
-   ],
-   "id": "9192c1ca551771f9",
+   "source": "cleaned_attributes = [\"BP\", \"PVI\", \"SV\", \"CO\"]",
+   "id": "1248c829e142ce1b",
    "outputs": [],
    "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "for attribute in cleaned_attributes:\n",
+    "    plt.figure(figsize=(8, 5))\n",
+    "    plt.subplot(1, 2, 1)\n",
+    "    sns.histplot(observation[attribute], bins=30, kde=True)\n",
+    "    plt.title(f'{attribute}')\n",
+    "    plt.xlabel(f'{attribute}')\n",
+    "    \n",
+    "    plt.subplot(1, 2, 2)\n",
+    "    plt.boxplot(observation[attribute])\n",
+    "    plt.title(f'{attribute}')\n",
+    "    plt.xlabel(f'{attribute}')\n",
+    "    plt.show()"
+   ],
+   "id": "bdb57379d2756fef",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Replace outliers",
+   "id": "72f0b02ce193ce0e"
   },
   {
    "metadata": {},
@@ -964,13 +842,13 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "prv = replace_outliers(prv)\n",
+    "observation[\"PRV\"] = replace_outliers(observation[\"PRV\"])\n",
     "\n",
-    "skin_temp = replace_outliers(skin_temp)\n",
+    "observation[\"Skin Temperature\"] = replace_outliers(observation[\"Skin Temperature\"])\n",
     "\n",
-    "hr = replace_outliers(hr)\n",
+    "observation[\"SpO₂\"] = replace_outliers(observation[\"SpO₂\"])\n",
     "\n",
-    "spo = replace_outliers(spo)"
+    "observation[\"HR\"] = replace_outliers(observation[\"HR\"])"
    ],
    "id": "1af79f8276e95ee5",
    "outputs": [],
@@ -978,53 +856,36 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Visualisation of replaced attributes",
+   "id": "d3d6dc0a49e8e9c7"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
-   "source": [
-    "plt.figure(figsize=(10, 8))\n",
-    "plt.subplot(2, 4, 1)\n",
-    "plt.hist(prv, bins=60, edgecolor=\"black\")\n",
-    "plt.ylabel(\"PRV ms\")\n",
-    "\n",
-    "plt.subplot(2, 4, 2)\n",
-    "plt.boxplot(prv)\n",
-    "plt.xlabel(\"PRV ms\")\n",
-    "\n",
-    "plt.subplot(2, 4, 3)\n",
-    "plt.hist(skin_temp, bins=60, edgecolor=\"black\")\n",
-    "plt.xlabel(\"Skin Temperature °C\")\n",
-    "\n",
-    "plt.subplot(2, 4, 4)\n",
-    "plt.boxplot(skin_temp)\n",
-    "plt.xlabel(\"Skin Temperature °C\")\n",
-    "\n",
-    "plt.subplot(2, 4, 5)\n",
-    "plt.hist(hr, bins=60, edgecolor=\"black\")\n",
-    "plt.xlabel(\"HR bpm\")\n",
-    "\n",
-    "plt.subplot(2, 4, 6)\n",
-    "plt.boxplot(hr)\n",
-    "plt.xlabel(\"HR bpm\")\n",
-    "\n",
-    "plt.subplot(2, 4, 7)\n",
-    "plt.hist(spo, bins=60, edgecolor=\"black\")\n",
-    "plt.xlabel(\"SpO %\")\n",
-    "\n",
-    "\n",
-    "plt.subplot(2, 4, 8)\n",
-    "plt.boxplot(spo)\n",
-    "plt.xlabel(\"SpO %\")\n",
-    "\n",
-    "plt.show()"
-   ],
-   "id": "42cf8129abb53f86",
+   "source": "replaced_attributes = [\"Skin Temperature\", \"SpO₂\", \"HR\", \"PRV\"]",
+   "id": "28086c246ccd0f9c",
    "outputs": [],
    "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "",
-   "id": "b9d526dfacd42271",
+   "source": [
+    "for attribute in replaced_attributes:\n",
+    "    plt.figure(figsize=(8, 5))\n",
+    "    plt.subplot(1, 2, 1)\n",
+    "    sns.histplot(observation[attribute], bins=30, kde=True)\n",
+    "    plt.title(f'{attribute}')\n",
+    "    plt.xlabel(f'{attribute}')\n",
+    "    \n",
+    "    plt.subplot(1, 2, 2)\n",
+    "    plt.boxplot(observation[attribute])\n",
+    "    plt.title(f'{attribute}')\n",
+    "    plt.xlabel(f'{attribute}')\n",
+    "    plt.show()"
+   ],
+   "id": "bb0ce73dfd879423",
    "outputs": [],
    "execution_count": null
   },
