--- a/iak1p.ipynb
+++ b/iak1p.ipynb
@@ -55,6 +55,15 @@
    "execution_count": 182
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "\n",
+    "### General statistics and information about attributes"
+   ],
+   "id": "dcae59eeae81b629"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-10-22T13:21:57.273627Z",
@@ -248,6 +257,12 @@
     }
    ],
    "execution_count": 183
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Visualisation of attributes",
+   "id": "dfd270e829ce01d5"
   },
   {
    "metadata": {
