--- a/FAZA_2.ipynb
+++ b/FAZA_2.ipynb
@@ -50,19 +50,19 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "y = observation['oximetry']\n",
-    "x = observation.drop(columns=['oximetry'], axis=1)\n",
+    "y = observation['oximetry'].values\n",
+    "x = observation.drop(columns=['oximetry'], axis=1).values\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "train_df = X_train.copy()\n",
-    "train_df[\"oximetry\"] = y_train\n",
-    "\n",
-    "test_df = X_test.copy()\n",
-    "test_df[\"oximetry\"] = y_test\n",
-    "\n",
-    "train_df.to_csv(\"train_raw.csv\", index=False)\n",
-    "test_df.to_csv(\"test_raw.csv\", index=False)"
+    "# train_df = X_train.copy()\n",
+    "# train_df[\"oximetry\"] = y_train\n",
+    "# \n",
+    "# test_df = X_test.copy()\n",
+    "# test_df[\"oximetry\"] = y_test\n",
+    "# \n",
+    "# train_df.to_csv(\"train_raw.csv\", index=False)\n",
+    "# test_df.to_csv(\"test_raw.csv\", index=False)"
    ],
    "id": "1774a2be3fceaaf8",
    "outputs": [],
@@ -83,12 +83,51 @@
    "execution_count": null
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-07T17:36:13.686828Z",
+     "start_time": "2025-11-07T17:36:13.679621Z"
+    }
+   },
    "cell_type": "code",
    "source": "train_df.dtypes",
    "id": "18480706788d6059",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SpO₂                     float64\n",
+       "HR                       float64\n",
+       "PI                       float64\n",
+       "RR                       float64\n",
+       "EtCO₂                    float64\n",
+       "FiO₂                     float64\n",
+       "PRV                      float64\n",
+       "BP                       float64\n",
+       "Skin Temperature         float64\n",
+       "Motion/Activity index    float64\n",
+       "PVI                      float64\n",
+       "Hb level                 float64\n",
+       "SV                       float64\n",
+       "CO                       float64\n",
+       "Blood Flow Index         float64\n",
+       "PPG waveform features    float64\n",
+       "Signal Quality Index     float64\n",
+       "Respiratory effort       float64\n",
+       "O₂ extraction ratio      float64\n",
+       "SNR                      float64\n",
+       "latitude                 float64\n",
+       "longitude                float64\n",
+       "oximetry                 float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 139
   },
   {
    "metadata": {},
@@ -114,6 +153,25 @@
   },
   {
    "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "from scipy.stats import skew\n",
+    "\n",
+    "skews = skew(x, axis=0)\n",
+    "\n",
+    "skew_df = pd.DataFrame({\n",
+    "    'Feature': x.columns,\n",
+    "    'Skewness': skews\n",
+    "})\n",
+    "\n",
+    "skew_df"
+   ],
+   "id": "f1445ef5f225afaf"
+  },
+  {
+   "metadata": {},
    "cell_type": "markdown",
    "source": "Scaling",
    "id": "1190e928d6ba926"
@@ -124,13 +182,11 @@
    "source": [
     "from sklearn.preprocessing import MinMaxScaler \n",
     "\n",
-    "min_max_train_df = train_df.copy()\n",
-    "\n",
     "scaler = MinMaxScaler()\n",
     "\n",
-    "scaled = scaler.fit_transform(min_max_train_df) \n",
+    "X_mm = scaler.fit_transform(X_train) \n",
     "\n",
-    "scaled"
+    "X_mm"
    ],
    "id": "9689c21d2975529f",
    "outputs": [],
@@ -142,17 +198,99 @@
    "source": [
     "from sklearn.preprocessing import StandardScaler \n",
     "\n",
-    "standard_train_df = train_df.copy()\n",
-    "\n",
     "scaler = StandardScaler()\n",
     "\n",
-    "scaled = scaler.fit_transform(standard_train_df) \n",
+    "X_std = scaler.fit_transform(X_train) \n",
     "\n",
-    "scaled"
+    "X_std"
    ],
    "id": "5a42dc9153876d4e",
    "outputs": [],
    "execution_count": null
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-07T17:40:24.853572Z",
+     "start_time": "2025-11-07T17:40:24.843299Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "print(\"StandardScaler:\")\n",
+    "print(\"Среднее =\", np.mean(X_train, axis=0).round(3))\n",
+    "print(\"Ст. отклонение =\", np.std(X_train, axis=0).round(3))\n",
+    "\n",
+    "print(\"\\nMinMaxScaler:\")\n",
+    "print(\"Минимум =\", np.min(X_train, axis=0).round(3))\n",
+    "print(\"Максимум =\", np.max(X_train, axis=0).round(3))"
+   ],
+   "id": "183c1adabae7b43b",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "StandardScaler:\n",
+      "Среднее = [ 97.541  79.383   8.724  16.139  39.649  59.381 117.756 104.438  35.982\n",
+      "  10.948  15.311  14.717  80.903   4.099  45.595  47.458  46.789  49.718\n",
+      "   0.249  29.965  29.998   7.55 ]\n",
+      "Ст. отклонение = [6.0600e-01 4.9700e+00 3.4960e+00 1.0360e+00 1.4290e+00 1.0745e+01\n",
+      " 2.1867e+01 4.0880e+00 8.4600e-01 1.4470e+00 1.5830e+00 7.1900e-01\n",
+      " 4.9820e+00 1.3500e-01 1.2267e+01 1.1966e+01 1.2199e+01 1.4054e+01\n",
+      " 2.9000e-02 5.7590e+00 2.2823e+01 7.3843e+01]\n",
+      "\n",
+      "MinMaxScaler:\n",
+      "Минимум = [  95.      60.       0.46    12.      35.194   21.      36.951   90.\n",
+      "   33.       5.736   10.      12.059   60.       4.       1.091    0.\n",
+      "    0.       0.       0.2     20.     -54.8   -156.474]\n",
+      "Максимум = [ 99.791 100.     18.718  20.     45.    100.    198.724 120.     38.\n",
+      "  17.137  20.     18.    100.      8.    100.    100.     99.353  98.785\n",
+      "   0.3    40.     68.798 178.004]\n"
+     ]
+    }
+   ],
+   "execution_count": 144
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-07T17:43:06.585016Z",
+     "start_time": "2025-11-07T17:43:06.575740Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "print(\"StandardScaler:\")\n",
+    "print(\"Среднее =\", np.mean(X_std, axis=0).round(3))\n",
+    "print(\"Ст. отклонение =\", np.std(X_std, axis=0).round(3))\n",
+    "\n",
+    "print(\"\\nMinMaxScaler:\")\n",
+    "print(\"Минимум =\", np.min(X_mm, axis=0).round(3))\n",
+    "print(\"Максимум =\", np.max(X_mm, axis=0).round(3))"
+   ],
+   "id": "a4de573e391702b3",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "StandardScaler:\n",
+      "Среднее = [-0. -0.  0. -0.  0. -0. -0. -0. -0.  0. -0.  0. -0.  0.  0.  0. -0. -0.\n",
+      "  0. -0.  0.  0.]\n",
+      "Ст. отклонение = [1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "\n",
+      "MinMaxScaler:\n",
+      "Минимум = [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      "Максимум = [1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n"
+     ]
+    }
+   ],
+   "execution_count": 146
   },
   {
    "metadata": {},
@@ -167,15 +305,12 @@
     "from sklearn.preprocessing import PowerTransformer\n",
     "from matplotlib import pyplot\n",
     "\n",
-    "power_train_df = train_df.copy()\n",
-    "\n",
-    "pyplot.hist(power_train_df, bins=25)\n",
+    "pyplot.hist(X_train[0], bins=10)\n",
     "\n",
     "power = PowerTransformer(method='yeo-johnson', standardize=True) \n",
+    "X_pt = power.fit_transform(X_train)\n",
     "\n",
-    "data_trans = power.fit_transform(power_train_df)\n",
-    "\n",
-    "pyplot.hist(data_trans, bins=25) "
+    "pyplot.hist(X_pt[0], bins=10) "
    ],
    "id": "305a8d7524ca14ce",
    "outputs": [],
@@ -188,14 +323,12 @@
     "from sklearn.preprocessing import QuantileTransformer\n",
     "from matplotlib import pyplot\n",
     "\n",
-    "quantile_train_df = train_df.copy()\n",
+    "pyplot.hist(X_train[0], bins=10)\n",
     "\n",
-    "pyplot.hist(quantile_train_df, bins=10)\n",
+    "power = QuantileTransformer(output_distribution='normal', random_state=42)\n",
+    "X_qt = power.fit_transform(X_train)\n",
     "\n",
-    "qt = QuantileTransformer(n_quantiles=10, random_state=0)\n",
-    "data_trans = qt.fit_transform(quantile_train_df)\n",
-    "\n",
-    "pyplot.hist(data_trans, bins=10)"
+    "pyplot.hist(X_qt[0], bins=10)"
    ],
    "id": "167941ea3ca4e9b1",
    "outputs": [],
