--- a/FAZA_2.ipynb
+++ b/FAZA_2.ipynb
@@ -539,6 +539,54 @@
     "X_test_pt  = power.transform(X_test_imp)"
    ],
    "id": "aa70ea344777cc0f"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## 2.3 B",
+   "id": "26d846f73af9ee05"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-08T15:44:02.960752Z",
+     "start_time": "2025-11-08T15:44:02.776211Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.preprocessing import QuantileTransformer\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.linear_model import Ridge\n",
+    "\n",
+    "model = make_pipeline(\n",
+    "    SimpleImputer(strategy=\"median\"),\n",
+    "    QuantileTransformer(output_distribution='normal', random_state=42),\n",
+    "    Ridge(alpha=1.0, random_state=42) \n",
+    ")\n",
+    "\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "r2 = model.score(X_test, y_test)\n",
+    "print(f\"R^2 на тесте: {r2:.4f}\")\n",
+    "\n",
+    "y_pred = model.predict(X_test[:5])\n",
+    "print(\"Пример предсказаний:\", y_pred)\n"
+   ],
+   "id": "6c66c422daa44ae8",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R^2 на тесте: 0.4723\n",
+      "Пример предсказаний: [0.50200506 0.5929281  0.62245149 1.10315618 0.73085681]\n"
+     ]
+    }
+   ],
+   "execution_count": 32
   }
  ],
  "metadata": {
