--- a/FAZA_2.ipynb
+++ b/FAZA_2.ipynb
@@ -10,10 +10,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "import scipy.stats as stats\n",
-    "from statsmodels.stats.power import TTestIndPower\n",
-    "import re"
+    "import matplotlib.pyplot as plt"
    ],
    "outputs": [],
    "execution_count": null
@@ -21,11 +18,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": [
-    "station = pd.read_csv(\"./094/station.csv\", sep='\\t', engine=\"python\")\n",
-    "patient = pd.read_csv(\"./094/patient.csv\", sep='\\t', engine=\"python\")\n",
-    "observation = pd.read_csv(\"./094/observation.csv\", sep='\\t', engine=\"python\")"
-   ],
+   "source": "observation = pd.read_csv(\"./094/observation.csv\", sep='\\t', engine=\"python\")",
    "id": "22aa2bc01ba5bdba",
    "outputs": [],
    "execution_count": null
@@ -69,6 +62,12 @@
   {
    "metadata": {},
    "cell_type": "markdown",
+   "source": "Here we divided our dataset into training and testing sets",
+   "id": "2270d51e9da2b90e"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
    "source": "## 2.1 B",
    "id": "b3dfc352d051b635"
   },
@@ -86,6 +85,12 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Check types",
+   "id": "6c6c69f13fc23ff9"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
    "source": "X_train.dtypes",
    "id": "51b2b23cb4d67f6e",
@@ -94,62 +99,65 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Check nulls",
+   "id": "d886cc07fe4d2e1f"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
-   "source": "X_train.isnull().sum().sum()",
+   "source": [
+    "from sklearn.impute import SimpleImputer\n",
+    "\n",
+    "if X_train.isnull().sum().sum() > 0:\n",
+    "    imputer = SimpleImputer(strategy='median')\n",
+    "    X_train = imputer.fit_transform(X_train)"
+   ],
    "id": "18480706788d6059",
    "outputs": [],
    "execution_count": null
   },
   {
    "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": [
-    "from sklearn.impute import SimpleImputer\n",
-    "\n",
-    "imputer = SimpleImputer(strategy='median')\n",
-    "\n",
-    "X_train_imputed = imputer.fit_transform(X_train)"
-   ],
-   "id": "487515fe4157cc26"
+   "cell_type": "markdown",
+   "source": "If there are missing values here, we will replace them with the median ",
+   "id": "b603b5ab49f825a5"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Check duplicates",
+   "id": "7cb942079421eebf"
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "X_train.duplicated().sum()",
+   "source": [
+    "if X_train.duplicated().sum() > 0:\n",
+    "    X_train = X_train.drop_duplicates()\n",
+    "    y_train = y_train.loc[X_train.index]"
+   ],
    "id": "700cded594b4a810",
    "outputs": [],
    "execution_count": null
   },
   {
    "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": [
-    "X_train = X_train.drop_duplicates()\n",
-    "y_train = y_train.loc[X_train.index]"
-   ],
-   "id": "7491205ff37aea44"
+   "cell_type": "markdown",
+   "source": "If there are duplicates here, we will remove them",
+   "id": "51291b05a1e8419d"
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "## 2.1 C",
+   "source": "## 2.1 C\n",
    "id": "91fd3a8fc4fc0e6c"
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "Scaling",
+   "source": "### Scaling",
    "id": "b8f69f4de4fa554d"
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": "",
-   "id": "1190e928d6ba926"
   },
   {
    "metadata": {},
@@ -187,15 +195,13 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "import numpy as np\n",
-    "\n",
     "print(\"StandardScaler:\")\n",
-    "print(\"Среднее =\", np.mean(X_train, axis=0).round(3))\n",
-    "print(\"Ст. отклонение =\", np.std(X_train, axis=0).round(3))\n",
+    "print(\"Mean: \", np.mean(X_train, axis=0).round(3))\n",
+    "print(\"Std: \", np.std(X_train, axis=0).round(3))\n",
     "\n",
     "print(\"\\nMinMaxScaler:\")\n",
-    "print(\"Минимум =\", np.min(X_train, axis=0).round(3))\n",
-    "print(\"Максимум =\", np.max(X_train, axis=0).round(3))"
+    "print(\"Min: \", np.min(X_train, axis=0).round(3))\n",
+    "print(\"Max: \", np.max(X_train, axis=0).round(3))"
    ],
    "id": "183c1adabae7b43b",
    "outputs": [],
@@ -205,15 +211,13 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "import numpy as np\n",
-    "\n",
     "print(\"StandardScaler:\")\n",
-    "print(\"Среднее =\", np.mean(X_std, axis=0).round(3))\n",
-    "print(\"Ст. отклонение =\", np.std(X_std, axis=0).round(3))\n",
+    "print(\"Mean: \", np.mean(X_std, axis=0).round(3))\n",
+    "print(\"Std: \", np.std(X_std, axis=0).round(3))\n",
     "\n",
     "print(\"\\nMinMaxScaler:\")\n",
-    "print(\"Минимум =\", np.min(X_mm, axis=0).round(3))\n",
-    "print(\"Максимум =\", np.max(X_mm, axis=0).round(3))"
+    "print(\"Min: \", np.min(X_mm, axis=0).round(3))\n",
+    "print(\"Max: \", np.max(X_mm, axis=0).round(3))"
    ],
    "id": "a4de573e391702b3",
    "outputs": [],
@@ -222,7 +226,17 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "Transformers",
+   "source": [
+    "After applying **StandardScaler**, the average value of each feature became close to 0, and the standard deviation became close to 1, confirming that the data was scaled correctly.\n",
+    "\n",
+    "After applying **MinMaxScaler**, the minimum values of the features became equal to 0, and the maximum values became equal to 1, also confirming that the normalization worked correctly."
+   ],
+   "id": "58b5fddbae439af3"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Transformers",
    "id": "f3fdb7341c5d2074"
   },
   {
@@ -236,6 +250,12 @@
    "id": "6577cb48f9be1c14",
    "outputs": [],
    "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Our initial histogram of the distribution of feature values",
+   "id": "346e94102b4b79f1"
   },
   {
    "metadata": {},
@@ -254,11 +274,9 @@
   },
   {
    "metadata": {},
-   "cell_type": "code",
-   "source": "pyplot.hist(X_train[0], bins=10)",
-   "id": "47ce47400396917f",
-   "outputs": [],
-   "execution_count": null
+   "cell_type": "markdown",
+   "source": "After **PowerTransformer**",
+   "id": "e18986c260929614"
   },
   {
    "metadata": {},
@@ -277,9 +295,13 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "After **QuantileTransformer**",
+   "id": "8014859686527ce3"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "from scipy.stats import skew\n",
     "\n",
@@ -292,7 +314,35 @@
     "\n",
     "skew_df"
    ],
-   "id": "f1864f5873117a07"
+   "id": "f1864f5873117a07",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Here we check whether the distribution is normal",
+   "id": "e23a48a6b14b49d8"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## 2.1 D",
+   "id": "782178b7cfe1e1a4"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "We divided our dataset into **training** (80%) and **test** (20%) samples\n",
+    "\n",
+    "Further work was carried out only with the **training** sample\n",
+    "\n",
+    "We compared two approaches - **scaling** and **transformation** - and analyzed the distribution of features (checked for skew) to assess how close the data was to a normal distribution\n",
+    "\n",
+    "Most features had a normal distribution, but the presence of some skewed features led us to decide to use **QuantileTransformer** for subsequent data preprocessing"
+   ],
+   "id": "ff3e2e42e29285ab"
   },
   {
    "metadata": {},
@@ -520,8 +570,6 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "from sklearn.preprocessing import QuantileTransformer\n",
     "from sklearn.impute import SimpleImputer\n",
@@ -538,21 +586,18 @@
     "X_train_pt = power.transform(X_train_imp)\n",
     "X_test_pt  = power.transform(X_test_imp)"
    ],
-   "id": "aa70ea344777cc0f"
+   "id": "aa70ea344777cc0f",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "## 2.3 B",
+   "source": "## 2.3 B\n",
    "id": "26d846f73af9ee05"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-08T15:44:02.960752Z",
-     "start_time": "2025-11-08T15:44:02.776211Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "import pandas as pd\n",
@@ -576,17 +621,8 @@
     "print(\"Пример предсказаний:\", y_pred)\n"
    ],
    "id": "6c66c422daa44ae8",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "R^2 на тесте: 0.4723\n",
-      "Пример предсказаний: [0.50200506 0.5929281  0.62245149 1.10315618 0.73085681]\n"
-     ]
-    }
-   ],
-   "execution_count": 32
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
