--- a/FAZA_2.ipynb
+++ b/FAZA_2.ipynb
@@ -550,7 +550,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "### (B-1b) Ranking of identified attributes by importance\n",
+    "### Ranking of identified attributes by importance\n",
     "\n",
     "All analysed attributes were ranked by their combined **Mean_Score**,\n",
     "which was obtained as the average of the normalised values of three different methods:\n",
@@ -586,7 +586,7 @@
    "cell_type": "markdown",
    "source": [
     "## 2.2 C\n",
-    "### (C-1b) Justification of decisions during implementation\n",
+    "### Justification of decisions during implementation\n",
     "\n",
     "When solving the problem, we used three approaches to assess the importance of attributes:\n",
     "**Pearson's correlation**, **ANOVA F-test**, and **Mutual Information**.  \n",
